# tauri-template

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/engine/: mod.rs
src/adapters/: chromiumAdapter.ts  engine.ts  webkitAdapter.ts
src/components/: Button.tsx  EngineSwitcher.tsx  TabBar.tsx  index.ts
src/components/advanced-settings-drawer/: AdvancedSettingsDrawer.tsx  index.ts
src/components/audio-floating-input/: AudioFloatingInput.tsx  index.ts
src/components/audio-list/: AudioList.tsx
src/components/audio-sample-data/: AudioSampleData.tsx  index.ts
src/components/chat-interface/: ChatInterface.tsx
src/components/conversation-list/: ConversationList.tsx
src/components/custom-model-import/: CustomModelImport.tsx  index.ts
src/components/floating-input/: FloatingInput.tsx  index.ts
src/components/generation-history/: GenerationHistory.tsx  index.ts
src/components/image-grid/: ImageGrid.tsx
src/components/image-sample-data/: ImageSampleData.tsx  index.ts
src/components/layout/: Layout.module.css  Layout.tsx
src/components/marketplace-filters/: MarketplaceFilters.tsx  index.ts
src/components/marketplace-grid/: MarketplaceGrid.tsx  index.ts
src/components/marketplace-list/: MarketplaceList.tsx  index.ts
src/components/model-card/: index.ts  (+1 more)
src/contexts/: ThemeContext.tsx
src/pages/: index.ts
src/python/: Makefile  README.md  env.example  pyproject.toml  requirements.txt  setup.py
src/python/docs/: README.md
src/python/examples/: basic_usage.py
src/python/scripts/: run_tests.py  setup_dev.py
src/python/src/playai/: __init__.py  cli.py
src/python/src/playai/ai/: __init__.py  generator.py
src/python/src/playai/config/: __init__.py  settings.py
src/python/src/playai/core/: __init__.py  main.py
src/python/src/playai/utils/: __init__.py  helpers.py
src/python/tests/: __init__.py
src/python/tests/test_core/: test_main.py
src/python/tests/test_utils/: test_helpers.py
src/state/: aiStore.ts  audioStore.ts  conversationStore.ts  imageStore.ts  marketplaceStore.ts  tabStore.ts
src/styles/: index.css
(+31 files in other folders)
